# rag_file_reader

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  model.py
app/routes/: generate.py  status_check.py  upload.py  web.py
app/schemas/: redis_document.py
app/services/: __init__.py  doc_processor.py  pdf_processor.py  processor.py  txt_processor.py
app/static/: style.css
app/templates/: documents.html  index.html  result.html
src/: logger.py  main.py
src/app/: ai_model.py
src/app/routes/: generate.py  status_check.py  upload.py  web.py
src/app/services/: __init__.py  doc_processor.py  pdf_processor.py  txt_processor.py
src/static/css/: result.css  upload.css
src/templates/: main.html
