[project]
name = "testing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip",
    "fastapi>=0.116.1",
    "pypdf>=5.8.0",
    "python-multipart>=0.0.20",
    "transformers>=4.53.2",
    "uvicorn[standard]>=0.35.0",
]
